--- a/eventBubblingCapturing.html
+++ b/eventBubblingCapturing.html
@@ -20,14 +20,14 @@
       </div>
     </div>
 
-    <div id="name">
+    <div id="name"></div>
     <script>
       document
         .getElementById("grandparent")
-        .addEventListener("click", () => console.log("grandparent"), true); //capturing
+        .addEventListener("click", () => console.log("grandparent"), false); //capturing
       document
         .getElementById("parent")
-        .addEventListener("click", () => console.log("parent"), false); //bubbling
+        .addEventListener("click", () => console.log("parent"), true); //bubbling
       document
         .getElementById("child")
         .addEventListener("click", () => console.log("child"), true); //capturing
